--- a/front/planning-poker/src/app/pages/estimation-board/estimation-board.scss
+++ b/front/planning-poker/src/app/pages/estimation-board/estimation-board.scss
@@ -60,8 +60,8 @@
 
   button {
     font-size: 32px;
-    width: 80px;
-    height: 80px;
+    width: 180px;
+    height: 180px;
     background: #4caf50;
     color: white;
     border: none;
@@ -92,6 +92,10 @@
 
     &:hover {
       background: #1976d2;
+    }
+
+    img {
+      pointer-events: none;
     }
   }
 }
