--- a/front/planning-poker/src/app/pages/estimation-board/estimation-board.html
+++ b/front/planning-poker/src/app/pages/estimation-board/estimation-board.html
@@ -1,24 +1,50 @@
 <div class="container">
   <div class="top-bar">
     <span class="usuario">Usuário: {{ participante }}</span>
-    <!-- <button (click)="logout()">Sair</button> -->
+    <div class="logout">
+      <button (click)="logout()">Sair</button>
+    </div>
   </div>
 
-<div *ngIf="tarefa" class="tarefa-info">
-  <h2>{{ tarefa.titulo }}</h2>
-  <p>{{ tarefa.descricao }}</p>
-</div>
+  <div *ngIf="tarefa" class="tarefa-info">
+    <h2>{{ tarefa.titulo }}</h2>
+    <p>{{ tarefa.descricao }}</p>
+  </div>
 
+  <!-- ETAPA 1: Votação de Pontos -->
+  <div *ngIf="estadoVotacao === 'pontos'">
+    <div class="cartas-titulo">Escolha a estimativa de esforço:</div>
+    <div class="cartas">
+      <button
+        *ngFor="let valor of cartas"
+        [class.selecionada]="valor === pontoSelecionado"
+        (click)="pontoSelecionado = +valor"
+      >
+        <ng-container *ngIf="valor !== -1; else cafe"> {{ valor }} </ng-container>
+        <ng-template #cafe>☕</ng-template>
+      </button>
+    </div>
+    <button class="btn-votar" (click)="votarPontos()">Confirmar Pontos</button>
+  </div>
 
-  <div class="cartas">
-    <button *ngFor="let carta of cartas" (click)="votarCarta(carta)">
-      <ng-container *ngIf="carta === '?'">
-       <img src="assets/cafe.png" alt="?" width="40" height="40" />
-      </ng-container>
-      <ng-container *ngIf="carta !== '?'">
-        {{ carta }}
-      </ng-container>
-    </button>
+  <!-- ETAPA 2: Votação de Horas -->
+  <div *ngIf="estadoVotacao === 'horas'">
+    <div class="cartas-titulo">Quantas horas para concluir?</div>
+    <div class="cartas">
+      <button
+        *ngFor="let h of horas"
+        [class.selecionada]="h === horaSelecionada"
+        (click)="horaSelecionada = h"
+      >
+        {{ h }}
+      </button>
+    </div>
+    <button class="btn-votar" (click)="votarHoras()">Confirmar Horas</button>
+  </div>
+
+  <!-- ETAPA FINAL -->
+  <div *ngIf="estadoVotacao === 'finalizado'">
+    <p class="mensagem-sucesso">Seu voto foi registrado com sucesso!</p>
   </div>
 
   <div class="botoes">
@@ -27,33 +53,23 @@
   </div>
 
   <h3>Estimativas dos Participantes</h3>
-<table *ngIf="estimativas.length > 0">
-  <thead>
-    <tr>
-      <th>Participante</th>
-      <th>Pontos</th>
-      <th>Horas</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let est of estimativas">
-      <td>{{ est.user }}</td>
-      <td>{{ est.Pontos }}</td>
-      <td>{{ est.Horas }}</td>
-    </tr>
-  </tbody>
-</table>
+  <table *ngIf="estimativas.length > 0">
+    <thead>
+      <tr>
+        <th>Participante</th>
+        <th>Pontos</th>
+        <th>Horas</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let est of estimativas">
+        <td>{{ est.user }}</td>
+        <td>{{ est.Pontos }}</td>
+        <td>{{ est.Horas }}</td>
+      </tr>
+    </tbody>
+  </table>
 
-<p *ngIf="estimativas.length === 0">Nenhuma estimativa registrada ainda.</p>
-
-  <!-- <div class="estimativas">
-    <h3>Estimativas dos Participantes:</h3>
-    <ul>
-      <li *ngFor="let est of estimativas">
-        {{ est.participante }}: {{ est.valor }}
-      </li>
-    </ul>
-  </div> -->
-
+  <p *ngIf="estimativas.length === 0">Nenhuma estimativa registrada ainda.</p>
   <p *ngIf="erro" class="erro-voto">{{ erro }}</p>
 </div>
