--- a/front/planning-poker/src/app/pages/estimation-board/estimation-board.scss
+++ b/front/planning-poker/src/app/pages/estimation-board/estimation-board.scss
@@ -60,8 +60,8 @@
 
   button {
     font-size: 32px;
-    width: 180px;
-    height: 180px;
+    width: 100px;
+    height: 150px;
     background: #4caf50;
     color: white;
     border: none;
@@ -72,6 +72,11 @@
 
     &:hover {
       background: #45a049;
+    }
+
+    &.selecionada {
+      background-color: #d0ebff;
+      border-color: #007bff;
     }
   }
 }
@@ -124,5 +129,21 @@
   border-radius: 8px;
   margin-bottom: 1rem;
   box-shadow: 0 0 8px rgba(0,0,0,0.1);
+}
+
+.btn-votar {
+  padding: 10px 20px;
+  font-size: 18px;
+  background-color: #007bff;
+  border: none;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.cartas-titulo {
+  margin-top: 30px;
+  font-weight: bold;
+  font-size: 18px;
 }
 
