--- a/front/planning-poker/src/app/pages/estimation-board/estimation-board.html
+++ b/front/planning-poker/src/app/pages/estimation-board/estimation-board.html
@@ -18,7 +18,7 @@
       <button
         *ngFor="let valor of cartas"
         [class.selecionada]="valor === pontoSelecionado"
-        (click)="pontoSelecionado = +valor"
+        (click)="votarPontosDireto(valor)"
       >
         <ng-container *ngIf="valor !== -1; else cafe"> {{ valor }} </ng-container>
         <ng-template #cafe>☕</ng-template>
