--- a/front/planning-poker/src/app/importar-tarefas/importar-tarefas.html
+++ b/front/planning-poker/src/app/importar-tarefas/importar-tarefas.html
@@ -71,7 +71,7 @@
   <button (click)="revelarPontos()" [disabled]="!podeRevelarPontos">
     Revelar Pontos
   </button>
-  <button (click)="revelarHoras()" [disabled]="podeRevelarHoras">
+  <button (click)="revelarHoras()" [disabled]="!podeRevelarHoras">
     Revelar Horas
   </button>
 </div>
