--- a/front/planning-poker/src/app/importar-tarefas/importar-tarefas.html
+++ b/front/planning-poker/src/app/importar-tarefas/importar-tarefas.html
@@ -42,7 +42,7 @@
       <td>{{ t.numero }}</td>
       <td>{{ t.titulo }}</td>
       <td>{{ t.descricao }}</td>
-      <td><button (click)="iniciarEstimativa(t)">Iniciar Estimativa</button></td>
+      <td><button (click)="iniciarEstimativa(t.id)">Iniciar Estimativa</button></td>
       <td><button (click)="removerTarefaEstimativa(t.id)">Remover Tarefa</button></td>
     </tr>
   </tbody>
